Start FFT on accel data to calculate resonance peaks
use gpio for led control, ledc won't behave
try to make rebooting more robust
add some animation spinners for the display
resize text a little for readability on display
change framerate to 12 from 30 (to better see the spinner)
render fundamental frequency with highest magnitude
other side button triggers a data hold reset

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,25 @@
 {
     "files.associations": {
-        "ets_sys.h": "c"
-    }
+        "ets_sys.h": "c",
+        "atomic": "cpp",
+        "*.tcc": "cpp",
+        "chrono": "cpp",
+        "cmath": "cpp",
+        "complex": "cpp",
+        "string": "cpp",
+        "unordered_map": "cpp",
+        "optional": "cpp",
+        "random": "cpp",
+        "fstream": "cpp",
+        "functional": "cpp",
+        "future": "cpp",
+        "istream": "cpp",
+        "limits": "cpp",
+        "sstream": "cpp",
+        "streambuf": "cpp",
+        "tuple": "cpp",
+        "type_traits": "cpp"
+    },
+    "cmake.configureOnOpen": true,
+    "idf.portWin": "COM8"
 }
